--- a/jupyter/0_python_producer.ipynb
+++ b/jupyter/0_python_producer.ipynb
@@ -14,9 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: kafka-python in /opt/conda/anaconda/lib/python3.6/site-packages (2.0.1)\r\n"
+     ]
+    }
+   ],
    "source": [
     "# Install the required packages\n",
     "!pip install kafka-python"
@@ -24,9 +32,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying gs://pandora-sde-case/data.csv...\n",
+      "- [1 files][ 82.2 MiB/ 82.2 MiB]                                                \n",
+      "Operation completed over 1 objects/82.2 MiB.                                     \n"
+     ]
+    }
+   ],
    "source": [
     "# Download the source data\n",
     "!gsutil cp gs://pandora-sde-case/data.csv /home/febiyan_rachman/"
@@ -34,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +114,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sending data.\n"
+     ]
+    }
+   ],
    "source": [
     "with open(read_file_name, 'r') as file:\n",
     "    print(\"Sending data.\")\n",
