--- a/jupyter/1_pyspark_dataprep.ipynb
+++ b/jupyter/1_pyspark_dataprep.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,9 +54,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- key: binary (nullable = true)\n",
+      " |-- value: binary (nullable = true)\n",
+      " |-- topic: string (nullable = true)\n",
+      " |-- partition: integer (nullable = true)\n",
+      " |-- offset: long (nullable = true)\n",
+      " |-- timestamp: timestamp (nullable = true)\n",
+      " |-- timestampType: integer (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "kafkaSourceDF = spark \\\n",
     "    .readStream \\\n",
@@ -79,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,9 +107,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+--------------------+------------+---------+------+--------------------+-------------+\n",
+      "| key|               value|       topic|partition|offset|           timestamp|timestampType|\n",
+      "+----+--------------------+------------+---------+------+--------------------+-------------+\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74000|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74001|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74002|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74003|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74004|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74005|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74006|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74007|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74008|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74009|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74010|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74011|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74012|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74013|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74014|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74015|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74016|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74017|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74018|2020-03-02 15:26:...|            0|\n",
+      "|null|[7B 22 64 61 74 6...|readings_raw|        0| 74019|2020-03-02 15:26:...|            0|\n",
+      "+----+--------------------+------------+---------+------+--------------------+-------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Wait 5 seconds before querying\n",
     "time.sleep(5);\n",
@@ -102,16 +151,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'message': 'Processing new data',\n",
+       " 'isDataAvailable': True,\n",
+       " 'isTriggerActive': True}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kafkaSourceQuery.status"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,15 +194,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- value: array (nullable = true)\n",
+      " |    |-- element: string (containsNull = true)\n",
+      " |-- timestamp: timestamp (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Get the CSV value from KafkaDF and turn it into an array\n",
     "csvDF = kafkaSourceDF.select(\n",
-    "    from_json(col(\"value\").cast(\"string\"), \"data STRING\").alias(\"value\")\n",
+    "    from_json(col(\"value\").cast(\"string\"), \"data STRING\").alias(\"value\"),\n",
+    "    col(\"timestamp\")\n",
     ").select(\n",
-    "    split(col(\"value.data\"), \",\").alias(\"value\")\n",
+    "    split(col(\"value.data\"), \",\").alias(\"value\"),\n",
+    "    col(\"timestamp\")\n",
     ")\n",
     "csvDF.printSchema()"
    ]
@@ -158,9 +234,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- timestamp: timestamp (nullable = true)\n",
+      " |-- message_id: string (nullable = true)\n",
+      " |-- reading_ts: timestamp (nullable = true)\n",
+      " |-- reading_value: float (nullable = true)\n",
+      " |-- reading_type: integer (nullable = true)\n",
+      " |-- plug_id: integer (nullable = true)\n",
+      " |-- household_id: integer (nullable = true)\n",
+      " |-- house_id: integer (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Parse the CSV and drop the duplicate values\n",
     "# The stream from Kafka may deliver a message at least once\n",
@@ -189,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,18 +294,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'message': 'Getting offsets from KafkaV2[Subscribe[readings_raw]]',\n",
+       " 'isDataAvailable': False,\n",
+       " 'isTriggerActive': True}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "readingsQuery.status"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+----------+-------------------+-------------+------------+-------+------------+--------+\n",
+      "|           timestamp|message_id|         reading_ts|reading_value|reading_type|plug_id|household_id|house_id|\n",
+      "+--------------------+----------+-------------------+-------------+------------+-------+------------+--------+\n",
+      "|2020-03-02 15:26:...|  14240628|2013-09-01 00:22:40|        3.216|           0|      1|           0|       3|\n",
+      "|2020-03-02 15:26:...|  14274618|2013-09-01 00:23:00|        0.788|           0|      0|           0|       4|\n",
+      "|2020-03-02 15:26:...|  14408067|2013-09-01 00:24:20|        0.788|           0|      0|           0|       4|\n",
+      "|2020-03-02 15:26:...|  14408242|2013-09-01 00:24:20|          0.0|           1|      1|           0|       7|\n",
+      "|2020-03-02 15:26:...|  15572218|2013-09-01 00:36:00|          0.0|           1|      2|           0|       7|\n",
+      "|2020-03-02 15:26:...|  15704595|2013-09-01 00:37:20|        3.351|           1|      1|           0|       1|\n",
+      "|2020-03-02 15:26:...|  15871287|2013-09-01 00:39:00|        2.806|           1|      1|           0|       1|\n",
+      "|2020-03-02 15:26:...|  16005317|2013-09-01 00:40:20|          0.0|           1|      1|           0|       3|\n",
+      "|2020-03-02 15:26:...|  16571952|2013-09-01 00:46:00|        0.161|           0|      0|           0|       9|\n",
+      "|2020-03-02 15:26:...|  16737181|2013-09-01 00:47:40|        0.355|           0|      0|           0|       3|\n",
+      "|2020-03-02 15:26:...|  16871327|2013-09-01 00:49:00|         2.25|           0|      1|           0|       7|\n",
+      "|2020-03-02 15:26:...|  16904196|2013-09-01 00:49:20|       15.359|           1|      0|           0|       8|\n",
+      "|2020-03-02 15:26:...|  17336394|2013-09-01 00:53:40|          0.0|           1|      2|           0|       2|\n",
+      "|2020-03-02 15:26:...|  17470731|2013-09-01 00:55:00|        0.161|           0|      0|           0|       9|\n",
+      "|2020-03-02 15:26:...|  19008859|2013-09-01 01:12:20|          0.0|           1|      2|           0|       9|\n",
+      "|2020-03-02 15:27:...|  19939852|2013-09-01 01:21:40|        0.161|           0|      2|           0|       2|\n",
+      "|2020-03-02 15:27:...|  19941181|2013-09-01 01:21:40|          0.0|           1|      0|           0|       5|\n",
+      "|2020-03-02 15:27:...|  20274253|2013-09-01 01:25:00|         2.25|           0|      1|           0|       7|\n",
+      "|2020-03-02 15:27:...|  20373966|2013-09-01 01:26:00|        0.161|           0|      2|           0|       9|\n",
+      "|2020-03-02 15:27:...|  20606958|2013-09-01 01:28:20|         2.25|           0|      1|           0|       5|\n",
+      "+--------------------+----------+-------------------+-------------+------------+-------+------------+--------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Sleep 40 seconds because we need to wait for the streaming state to initialise\n",
     "time.sleep(40)\n",
@@ -221,12 +360,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Don't forget to stop this later\n",
-    "# readingsQuery.stop()"
+    "readingsQuery.stop()"
    ]
   },
   {
@@ -235,16 +374,16 @@
    "source": [
     "## Write Back Prepared Data to Kafka\n",
     "\n",
-    "Now that the data is clean, we write back to Kafka -- to the `readings_prepared` topic to be consumed by alerting and ingestion streaming jobs downstream. Write as soon as data is available, without a time-based trigger."
+    "Now that the data is clean, we write back to Kafka -- to the `readings_prepared` topic to be consumed by alerting and ingestion streaming jobs downstream. Write as soon as data is available, without a time-based trigger. Using timestamp as key in case I need to restart streaming jobs while iterating."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kafkaWriteQuery = readingsDF.selectExpr(\"timestamp AS key\", \"CAST(to_json(struct(*)) AS STRING) AS value\")\\\n",
+    "kafkaWriteQuery = readingsDF.selectExpr(\"CAST(timestamp AS STRING) AS key\", \"CAST(to_json(struct(*)) AS STRING) AS value\")\\\n",
     "    .writeStream\\\n",
     "    .format(\"kafka\")\\\n",
     "    .option(\"kafka.bootstrap.servers\", kafkaBootstrapServer)\\\n",
@@ -262,9 +401,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '0226cc16-5616-4ca7-a484-423e99021fe1',\n",
+       " 'runId': '93ce24a1-a2dc-4369-869e-491ccbf0b441',\n",
+       " 'name': None,\n",
+       " 'timestamp': '2020-03-02T15:28:26.107Z',\n",
+       " 'batchId': 0,\n",
+       " 'numInputRows': 0,\n",
+       " 'processedRowsPerSecond': 0.0,\n",
+       " 'durationMs': {'addBatch': 11606,\n",
+       "  'getBatch': 10,\n",
+       "  'queryPlanning': 120,\n",
+       "  'triggerExecution': 11828},\n",
+       " 'eventTime': {'watermark': '1970-01-01T00:00:00.000Z'},\n",
+       " 'stateOperators': [{'numRowsTotal': 0,\n",
+       "   'numRowsUpdated': 0,\n",
+       "   'memoryUsedBytes': 44599,\n",
+       "   'customMetrics': {'loadedMapCacheHitCount': 0,\n",
+       "    'loadedMapCacheMissCount': 0,\n",
+       "    'stateOnCurrentVersionSizeBytes': 15799}}],\n",
+       " 'sources': [{'description': 'KafkaV2[Subscribe[readings_raw]]',\n",
+       "   'startOffset': None,\n",
+       "   'endOffset': {'readings_raw': {'0': 65000}},\n",
+       "   'numInputRows': 0,\n",
+       "   'processedRowsPerSecond': 0.0}],\n",
+       " 'sink': {'description': 'org.apache.spark.sql.kafka010.KafkaSourceProvider@1b57f220'}}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "time.sleep(15)\n",
     "kafkaWriteQuery.lastProgress"
@@ -272,52 +445,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'message': 'Processing new data',\n",
+       " 'isDataAvailable': True,\n",
+       " 'isTriggerActive': True}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kafkaWriteQuery.status"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'id': '0226cc16-5616-4ca7-a484-423e99021fe1',\n",
+       " 'runId': '93ce24a1-a2dc-4369-869e-491ccbf0b441',\n",
+       " 'name': None,\n",
+       " 'timestamp': '2020-03-02T15:28:37.936Z',\n",
+       " 'batchId': 1,\n",
+       " 'numInputRows': 33000,\n",
+       " 'inputRowsPerSecond': 2789.753994420492,\n",
+       " 'processedRowsPerSecond': 2117.9641871510175,\n",
+       " 'durationMs': {'addBatch': 15369,\n",
+       "  'getBatch': 1,\n",
+       "  'getEndOffset': 0,\n",
+       "  'queryPlanning': 86,\n",
+       "  'setOffsetRange': 48,\n",
+       "  'triggerExecution': 15580,\n",
+       "  'walCommit': 29},\n",
+       " 'eventTime': {'avg': '2013-09-01T03:48:44.664Z',\n",
+       "  'max': '2013-09-01T18:08:00.000Z',\n",
+       "  'min': '2013-08-31T22:00:20.000Z',\n",
+       "  'watermark': '1970-01-01T00:00:00.000Z'},\n",
+       " 'stateOperators': [{'numRowsTotal': 33000,\n",
+       "   'numRowsUpdated': 33000,\n",
+       "   'memoryUsedBytes': 8204303,\n",
+       "   'customMetrics': {'loadedMapCacheHitCount': 200,\n",
+       "    'loadedMapCacheMissCount': 0,\n",
+       "    'stateOnCurrentVersionSizeBytes': 8146703}}],\n",
+       " 'sources': [{'description': 'KafkaV2[Subscribe[readings_raw]]',\n",
+       "   'startOffset': {'readings_raw': {'0': 65000}},\n",
+       "   'endOffset': {'readings_raw': {'0': 98000}},\n",
+       "   'numInputRows': 33000,\n",
+       "   'inputRowsPerSecond': 2789.753994420492,\n",
+       "   'processedRowsPerSecond': 2117.9641871510175}],\n",
+       " 'sink': {'description': 'org.apache.spark.sql.kafka010.KafkaSourceProvider@1b57f220'}}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "kafkaWriteQuery.lastProgress\n",
     "# kafkaWriteQuery.stop()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Write Back Prepared Data to Kafka\n",
-    "\n",
-    "Now that the data is clean, we write back to Kafka -- to the `readings_prepared` topic to be consumed by alerting and ingestion streaming jobs downstream. Write as soon as data is available, without a time-based trigger."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
