--- a/jupyter/2a1_spark_case_1_stats_calculation.ipynb
+++ b/jupyter/2a1_spark_case_1_stats_calculation.ipynb
@@ -26,9 +26,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Intitializing Scala interpreter ..."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Spark Web UI available at http://spark-alert-1-stats-m:8088/proxy/application_1583161277657_0002\n",
+       "SparkContext available as 'sc' (version = 2.4.5, master = yarn, app id = application_1583161277657_0002)\n",
+       "SparkSession available as 'spark'\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "import spark.implicits._\n",
+       "import java.sql.Timestamp\n",
+       "import org.apache.spark.sql.SparkSession\n",
+       "import org.apache.spark.sql.types._\n",
+       "import org.apache.spark.sql.functions._\n",
+       "import org.apache.spark.sql.streaming.{GroupStateTimeout, OutputMode, GroupState}\n",
+       "import org.apache.spark.sql.streaming.Trigger\n"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import spark.implicits._\n",
     "import java.sql.Timestamp\n",
@@ -41,9 +78,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "kafkaBootstrapServer: String = kafka-m:9092\n",
+       "kafkaSourceTopic: String = readings_prepared\n",
+       "kafkaTargetTopic: String = alert_1_stats\n",
+       "checkpointLocation: String = /tmp\n",
+       "triggerTime: String = 1 minute\n",
+       "deduplicateWindow: String = 1 minute\n"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val kafkaBootstrapServer = \"kafka-m:9092\"\n",
     "val kafkaSourceTopic = \"readings_prepared\"\n",
@@ -62,9 +115,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mySchema: org.apache.spark.sql.types.StructType = StructType(StructField(message_id,StringType,false), StructField(reading_ts,TimestampType,false), StructField(reading_value,FloatType,false), StructField(reading_type,IntegerType,false), StructField(plug_id,IntegerType,false), StructField(household_id,IntegerType,false), StructField(house_id,IntegerType,false))\n"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// This will be used to give the source `readings_prepared` stream data a schema\n",
     "val mySchema = StructType(Seq(\n",
@@ -80,9 +144,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined class ReadingsInput\n",
+       "defined class StatsState\n"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Somehow case classes need to be defined in a separate cell\n",
     "// This will be used in the stateful streaming calculation as the input rows\n",
@@ -117,9 +193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "readings: org.apache.spark.sql.Dataset[org.apache.spark.sql.Row] = [message_id: string, reading_ts: timestamp ... 5 more fields]\n"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val readings = spark\n",
     "    .readStream \n",
@@ -145,27 +232,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "streamQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@767b3bb8\n"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val streamQuery = readings.writeStream.format(\"memory\").queryName(\"readings\").start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res0: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
+       "{\n",
+       "  \"message\" : \"Getting offsets from KafkaV2[Subscribe[readings_prepared]]\",\n",
+       "  \"isDataAvailable\" : false,\n",
+       "  \"isTriggerActive\" : true\n",
+       "}\n"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "streamQuery.status"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
+      "|message_id|         reading_ts|reading_value|reading_type|plug_id|household_id|house_id|\n",
+      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
+      "| 118504114|2013-09-01 17:53:00|          0.0|           1|      0|           0|       9|\n",
+      "| 115998526|2013-09-01 17:27:20|          0.0|           1|      0|           0|       0|\n",
+      "| 116872749|2013-09-01 17:36:20|          0.0|           1|      1|           0|       9|\n",
+      "| 118371375|2013-09-01 17:51:40|          0.0|           1|      2|           0|       4|\n",
+      "| 117153098|2013-09-01 17:39:20|          0.0|           1|      0|           0|       5|\n",
+      "| 117306922|2013-09-01 17:41:00|       50.627|           1|      0|           0|       8|\n",
+      "| 118503302|2013-09-01 17:53:00|       41.056|           1|      2|           0|       0|\n",
+      "| 118868629|2013-09-01 17:56:40|      122.738|           1|      1|           0|       1|\n",
+      "| 119725890|2013-09-01 18:05:20|          0.0|           1|      0|           0|       6|\n",
+      "| 119590206|2013-09-01 18:04:00|          0.0|           1|      2|           0|       7|\n",
+      "| 119496230|2013-09-01 18:03:00|          0.0|           1|      1|           0|       6|\n",
+      "| 119465366|2013-09-01 18:02:40|          0.0|           1|      2|           0|       9|\n",
+      "| 119136988|2013-09-01 17:59:20|          0.0|           1|      0|           0|       4|\n",
+      "| 119333968|2013-09-01 18:01:20|        40.97|           1|      2|           0|       0|\n",
+      "| 119300642|2013-09-01 18:01:00|          0.0|           1|      2|           0|       2|\n",
+      "| 119336636|2013-09-01 18:01:20|          0.0|           1|      0|           0|       9|\n",
+      "| 119234296|2013-09-01 18:00:20|      140.243|           1|      1|           0|       1|\n",
+      "| 119689344|2013-09-01 18:05:00|          0.0|           1|      1|           0|       3|\n",
+      "| 119465250|2013-09-01 18:02:40|          0.0|           1|      0|           0|       5|\n",
+      "| 119590291|2013-09-01 18:04:00|       62.252|           1|      0|           0|       8|\n",
+      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "// Thread.sleep(60000)\n",
     "spark.sql(\"select * from readings\").show()"
@@ -173,9 +320,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res2: org.apache.spark.sql.streaming.StreamingQueryProgress = null\n"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// streamQuery.stop()\n",
     "streamQuery.lastProgress"
@@ -207,9 +365,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "updateHouseHourStats: (state: StatsState, input: ReadingsInput)StatsState\n",
+       "updateAllHouseHourStats: (key: (Int, Int), inputs: Iterator[ReadingsInput], groupState: org.apache.spark.sql.streaming.GroupState[StatsState])StatsState\n"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "/**\n",
     " * To be called by updateAllHouseHourStats\n",
@@ -280,9 +450,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "stats: org.apache.spark.sql.Dataset[StatsState] = [house_id: int, hour: int ... 6 more fields]\n",
+       "query: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@13e3be6\n"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val stats = readings\n",
     "    .select($\"house_id\", hour($\"reading_ts\").alias(\"hour\"), $\"reading_value\", $\"reading_ts\")\n",
@@ -307,9 +489,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res5: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
+       "{\n",
+       "  \"message\" : \"Processing new data\",\n",
+       "  \"isDataAvailable\" : true,\n",
+       "  \"isTriggerActive\" : true\n",
+       "}\n"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Thread.sleep(10000)\n",
     "query.status"
@@ -317,9 +515,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res8: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
+       "{\n",
+       "  \"id\" : \"8e479727-56f4-41c9-ab47-d5e50904d707\",\n",
+       "  \"runId\" : \"6f8234eb-ce83-4e55-a34a-625defdc8a24\",\n",
+       "  \"name\" : null,\n",
+       "  \"timestamp\" : \"2020-03-02T15:29:00.001Z\",\n",
+       "  \"batchId\" : 1,\n",
+       "  \"numInputRows\" : 33000,\n",
+       "  \"inputRowsPerSecond\" : 549.9908334861086,\n",
+       "  \"processedRowsPerSecond\" : 692.7097546128172,\n",
+       "  \"durationMs\" : {\n",
+       "    \"addBatch\" : 46391,\n",
+       "    \"getBatch\" : 0,\n",
+       "    \"getEndOffset\" : 0,\n",
+       "    \"queryPlanning\" : 674,\n",
+       "    \"setOffsetRange\" : 1,\n",
+       "    \"triggerExecution\" : 47639,\n",
+       "    \"walCommit\" : 426\n",
+       "  },\n",
+       "  \"eventTime\" : {\n",
+       "    \"avg\" : \"2013-09-01T03:48:44.664Z\",\n",
+       "    \"max\" : \"2013-09-01T18:08:00.000Z\",\n",
+       "    \"min\" : \"2013-08-31T22:00:20.000Z\",\n",
+       "    \"watermark\" : \"1970-01-01T00:00:00.000Z\"\n",
+       "  },\n",
+       "  \"stateOperators\" : [ {\n",
+       "    \"numRowsTotal\" : 110..."
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// query.stop()\n",
     "query.lastProgress"
