--- a/jupyter/2b1_spark_case_2_stats_calculation.ipynb
+++ b/jupyter/2b1_spark_case_2_stats_calculation.ipynb
@@ -20,9 +20,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Intitializing Scala interpreter ..."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Spark Web UI available at http://spark-alert-2-stats-m:8088/proxy/application_1583161279001_0002\n",
+       "SparkContext available as 'sc' (version = 2.4.5, master = yarn, app id = application_1583161279001_0002)\n",
+       "SparkSession available as 'spark'\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "import spark.implicits._\n",
+       "import java.sql.Timestamp\n",
+       "import org.apache.spark.sql.SparkSession\n",
+       "import org.apache.spark.sql.types._\n",
+       "import org.apache.spark.sql.functions._\n",
+       "import org.apache.spark.sql.streaming.{GroupStateTimeout, OutputMode, GroupState}\n",
+       "import org.apache.spark.sql.streaming.Trigger\n"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import spark.implicits._\n",
     "import java.sql.Timestamp\n",
@@ -35,9 +72,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "kafkaBootstrapServer: String = kafka-m:9092\n",
+       "kafkaSourceTopic: String = readings_prepared\n",
+       "kafkaTargetTopic: String = alert_2_stats\n",
+       "checkpointLocation: String = /tmp\n",
+       "triggerTime: String = 1 minute\n",
+       "deduplicateWindow: String = 1 minute\n"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val kafkaBootstrapServer = \"kafka-m:9092\"\n",
     "val kafkaSourceTopic = \"readings_prepared\"\n",
@@ -56,9 +109,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mySchema: org.apache.spark.sql.types.StructType = StructType(StructField(message_id,StringType,false), StructField(reading_ts,TimestampType,false), StructField(reading_value,FloatType,false), StructField(reading_type,IntegerType,false), StructField(plug_id,IntegerType,false), StructField(household_id,IntegerType,false), StructField(house_id,IntegerType,false))\n"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// This will be used to give the source `readings_prepared` stream data a schema\n",
     "val mySchema = StructType(Seq(\n",
@@ -74,14 +138,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defined class ReadingsInput\n",
+       "defined class StatsState\n"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Somehow case classes need to be defined in a separate cell\n",
     "// This will be used in the stateful streaming calculation as the input rows\n",
     "case class ReadingsInput(\n",
-    "    house_id: Int, \n",
+    "    day: String, \n",
     "    hour: Int, \n",
     "    reading_value: Float,\n",
     "    reading_ts: java.sql.Timestamp \n",
@@ -111,9 +187,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "readings: org.apache.spark.sql.Dataset[org.apache.spark.sql.Row] = [message_id: string, reading_ts: timestamp ... 5 more fields]\n"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val readings = spark\n",
     "    .readStream \n",
@@ -139,27 +226,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "streamQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@651e97e2\n"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val streamQuery = readings.writeStream.format(\"memory\").queryName(\"readings\").start()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res0: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
+       "{\n",
+       "  \"message\" : \"Getting offsets from KafkaV2[Subscribe[readings_prepared]]\",\n",
+       "  \"isDataAvailable\" : false,\n",
+       "  \"isTriggerActive\" : true\n",
+       "}\n"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "streamQuery.status"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
+      "|message_id|         reading_ts|reading_value|reading_type|plug_id|household_id|house_id|\n",
+      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
+      "| 118504114|2013-09-01 17:53:00|          0.0|           1|      0|           0|       9|\n",
+      "| 115998526|2013-09-01 17:27:20|          0.0|           1|      0|           0|       0|\n",
+      "| 116872749|2013-09-01 17:36:20|          0.0|           1|      1|           0|       9|\n",
+      "| 118371375|2013-09-01 17:51:40|          0.0|           1|      2|           0|       4|\n",
+      "| 117153098|2013-09-01 17:39:20|          0.0|           1|      0|           0|       5|\n",
+      "| 117306922|2013-09-01 17:41:00|       50.627|           1|      0|           0|       8|\n",
+      "| 118503302|2013-09-01 17:53:00|       41.056|           1|      2|           0|       0|\n",
+      "| 118868629|2013-09-01 17:56:40|      122.738|           1|      1|           0|       1|\n",
+      "| 119725890|2013-09-01 18:05:20|          0.0|           1|      0|           0|       6|\n",
+      "| 119590206|2013-09-01 18:04:00|          0.0|           1|      2|           0|       7|\n",
+      "| 119496230|2013-09-01 18:03:00|          0.0|           1|      1|           0|       6|\n",
+      "| 119465366|2013-09-01 18:02:40|          0.0|           1|      2|           0|       9|\n",
+      "| 119136988|2013-09-01 17:59:20|          0.0|           1|      0|           0|       4|\n",
+      "| 119333968|2013-09-01 18:01:20|        40.97|           1|      2|           0|       0|\n",
+      "| 119300642|2013-09-01 18:01:00|          0.0|           1|      2|           0|       2|\n",
+      "| 119336636|2013-09-01 18:01:20|          0.0|           1|      0|           0|       9|\n",
+      "| 119234296|2013-09-01 18:00:20|      140.243|           1|      1|           0|       1|\n",
+      "| 119689344|2013-09-01 18:05:00|          0.0|           1|      1|           0|       3|\n",
+      "| 119465250|2013-09-01 18:02:40|          0.0|           1|      0|           0|       5|\n",
+      "| 119590291|2013-09-01 18:04:00|       62.252|           1|      0|           0|       8|\n",
+      "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "// Thread.sleep(60000)\n",
     "spark.sql(\"select * from readings\").show()"
@@ -167,9 +314,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res8: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
+       "{\n",
+       "  \"id\" : \"4cd512af-ec55-4a22-a1a0-ff5f8f9d1514\",\n",
+       "  \"runId\" : \"d9f1ef0f-335a-41d8-85c9-18087163e7c6\",\n",
+       "  \"name\" : \"readings\",\n",
+       "  \"timestamp\" : \"2020-03-02T15:34:51.144Z\",\n",
+       "  \"batchId\" : 14,\n",
+       "  \"numInputRows\" : 5149,\n",
+       "  \"inputRowsPerSecond\" : 177.05718510367595,\n",
+       "  \"processedRowsPerSecond\" : 511.11772880682946,\n",
+       "  \"durationMs\" : {\n",
+       "    \"addBatch\" : 9909,\n",
+       "    \"getBatch\" : 0,\n",
+       "    \"getEndOffset\" : 0,\n",
+       "    \"queryPlanning\" : 62,\n",
+       "    \"setOffsetRange\" : 3,\n",
+       "    \"triggerExecution\" : 10074,\n",
+       "    \"walCommit\" : 34\n",
+       "  },\n",
+       "  \"eventTime\" : {\n",
+       "    \"avg\" : \"2013-09-02T03:16:41.204Z\",\n",
+       "    \"max\" : \"2013-09-02T04:04:20.000Z\",\n",
+       "    \"min\" : \"2013-09-02T02:19:20.000Z\",\n",
+       "    \"watermark\" : \"2013-09-02T02:35:20.000Z\"\n",
+       "  },\n",
+       "  \"stateOperators\" : [ {\n",
+       "    \"numRowsTotal\" ..."
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// streamQuery.stop()\n",
     "streamQuery.lastProgress"
@@ -201,9 +385,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "updateHouseHourStats: (state: StatsState, input: ReadingsInput)StatsState\n",
+       "updateAllHouseHourStats: (key: (String, Int), inputs: Iterator[ReadingsInput], groupState: org.apache.spark.sql.streaming.GroupState[StatsState])StatsState\n"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "/**\n",
     " * To be called by updateAllHouseHourStats\n",
@@ -274,9 +470,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "stats: org.apache.spark.sql.Dataset[StatsState] = [day: string, hour: int ... 6 more fields]\n",
+       "query: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@4f6ae761\n"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "val stats = readings\n",
     "    .select(\n",
@@ -306,9 +514,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res9: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
+       "{\n",
+       "  \"message\" : \"Processing new data\",\n",
+       "  \"isDataAvailable\" : true,\n",
+       "  \"isTriggerActive\" : true\n",
+       "}\n"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// Thread.sleep(10000)\n",
     "query.status"
@@ -316,9 +540,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res11: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
+       "{\n",
+       "  \"id\" : \"06cc3b45-c2f4-4e5a-b018-44f182391393\",\n",
+       "  \"runId\" : \"3a1614d4-5eea-47be-bd80-49fdd6cda09c\",\n",
+       "  \"name\" : null,\n",
+       "  \"timestamp\" : \"2020-03-02T15:36:00.000Z\",\n",
+       "  \"batchId\" : 4,\n",
+       "  \"numInputRows\" : 11468,\n",
+       "  \"inputRowsPerSecond\" : 191.13333333333333,\n",
+       "  \"processedRowsPerSecond\" : 552.8612061900401,\n",
+       "  \"durationMs\" : {\n",
+       "    \"addBatch\" : 20488,\n",
+       "    \"getBatch\" : 0,\n",
+       "    \"getEndOffset\" : 1,\n",
+       "    \"queryPlanning\" : 150,\n",
+       "    \"setOffsetRange\" : 1,\n",
+       "    \"triggerExecution\" : 20743,\n",
+       "    \"walCommit\" : 34\n",
+       "  },\n",
+       "  \"eventTime\" : {\n",
+       "    \"avg\" : \"2013-09-02T06:31:45.667Z\",\n",
+       "    \"max\" : \"2013-09-02T08:28:00.000Z\",\n",
+       "    \"min\" : \"2013-09-02T04:40:40.000Z\",\n",
+       "    \"watermark\" : \"2013-09-02T04:57:00.000Z\"\n",
+       "  },\n",
+       "  \"stateOperators\" : [ {\n",
+       "    \"numRowsTotal\" : 12..."
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "// query.stop()\n",
     "query.lastProgress"
