--- a/jupyter/3_spark_ingest.ipynb
+++ b/jupyter/3_spark_ingest.ipynb
@@ -30,8 +30,8 @@
     {
      "data": {
       "text/plain": [
-       "Spark Web UI available at http://spark-alert-1-detect-m:8088/proxy/application_1583148924695_0001\n",
-       "SparkContext available as 'sc' (version = 2.4.5, master = yarn, app id = application_1583148924695_0001)\n",
+       "Spark Web UI available at http://spark-ingest-m:8088/proxy/application_1583161289898_0001\n",
+       "SparkContext available as 'sc' (version = 2.4.5, master = yarn, app id = application_1583161289898_0001)\n",
        "SparkSession available as 'spark'\n"
       ]
      },
@@ -45,7 +45,6 @@
        "import org.apache.spark.sql.types._\n",
        "import org.apache.spark.sql.functions._\n",
        "import org.apache.spark.sql.streaming.Trigger\n",
-       "import org.apache.spark.sql.expressions.Window\n",
        "import org.apache.spark.sql._\n"
       ]
      },
@@ -72,11 +71,9 @@
       "text/plain": [
        "kafkaBootstrapServer: String = kafka-m:9092\n",
        "kafkaReadingsTopic: String = readings_prepared\n",
-       "kafkaStatsTopic: String = alert_1_stats\n",
        "kafkaDedupWatermarkTime: String = 1 minute\n",
-       "joinWatermarkTime: String = 1 minute\n",
-       "bigQueryTargetTable: String = smartplugs.alert_1_anomaly\n",
-       "bigQueryTempBucket: String = pandora-sde-case\n",
+       "bigQueryTargetTable: String = smartplugs.readings\n",
+       "bigQueryTempBucket: String = pandora-sde-case/ingest\n",
        "outputTriggerTime: String = 1 minute\n"
       ]
      },
@@ -109,8 +106,7 @@
     {
      "data": {
       "text/plain": [
-       "readingsSchema: org.apache.spark.sql.types.StructType = StructType(StructField(message_id,StringType,false), StructField(reading_ts,TimestampType,false), StructField(reading_value,FloatType,false), StructField(reading_type,IntegerType,false), StructField(plug_id,IntegerType,false), StructField(household_id,IntegerType,false), StructField(house_id,IntegerType,false))\n",
-       "statsSchema: org.apache.spark.sql.types.StructType = StructType(StructField(house_id,IntegerType,false), StructField(hour,IntegerType,false), StructField(mean,FloatType,false), StructField(m2,FloatType,false), StructField(variance,FloatType,false), StructField(std_dev,FloatType,false), StructField(count,LongType,false), StructField(last_ts,TimestampType,false))\n"
+       "readingsSchema: org.apache.spark.sql.types.StructType = StructType(StructField(message_id,StringType,false), StructField(reading_ts,TimestampType,false), StructField(reading_value,FloatType,false), StructField(reading_type,IntegerType,false), StructField(plug_id,IntegerType,false), StructField(household_id,IntegerType,false), StructField(house_id,IntegerType,false))\n"
       ]
      },
      "execution_count": 3,
@@ -140,48 +136,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Intitializing Scala interpreter ..."
+       "readings: org.apache.spark.sql.Dataset[org.apache.spark.sql.Row] = [message_id: string, reading_ts: timestamp ... 5 more fields]\n"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Spark Web UI available at http://spark-alert-1-stats-m:8088/proxy/application_1583148921700_0002\n",
-       "SparkContext available as 'sc' (version = 2.4.5, master = yarn, app id = application_1583148921700_0002)\n",
-       "SparkSession available as 'spark'\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "ename": "<console>",
-     "evalue": "28: error: not found: value kafkaBootstrapServer",
-     "output_type": "error",
-     "traceback": [
-      "<console>:28: error: not found: value kafkaBootstrapServer",
-      "           .option(\"kafka.bootstrap.servers\", kafkaBootstrapServer)",
-      "                                              ^",
-      "<console>:29: error: not found: value kafkaReadingsTopic",
-      "           .option(\"subscribe\", kafkaReadingsTopic)",
-      "                                ^",
-      "<console>:32: error: not found: value readingsSchema",
-      "           .select(from_json($\"value\", readingsSchema).as(\"data\"))",
-      "                                       ^",
-      "<console>:34: error: not found: value kafkaDedupWatermarkTime",
-      "           .withWatermark(\"reading_ts\", kafkaDedupWatermarkTime)",
-      "                                        ^",
-      ""
-     ]
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -194,7 +160,7 @@
     "    .load()\n",
     "    .selectExpr(\"CAST(value AS STRING)\")\n",
     "    .select(from_json($\"value\", readingsSchema).as(\"data\"))\n",
-    "    .select($\"\")\n",
+    "    .select($\"data.*\")\n",
     "    .withWatermark(\"reading_ts\", kafkaDedupWatermarkTime) \n",
     "    .dropDuplicates()\n",
     "    .filter($\"reading_type\" === 1) // Only take the \"current load\" measurement"
@@ -217,11 +183,11 @@
     {
      "data": {
       "text/plain": [
-       "readingsQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@7e4fdee9\n",
+       "readingsQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@101d3c83\n",
        "res0: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
        "{\n",
-       "  \"message\" : \"Getting offsets from KafkaV2[Subscribe[readings_prepared]]\",\n",
-       "  \"isDataAvailable\" : false,\n",
+       "  \"message\" : \"Processing new data\",\n",
+       "  \"isDataAvailable\" : true,\n",
        "  \"isTriggerActive\" : true\n",
        "}\n"
       ]
@@ -239,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -249,26 +215,26 @@
       "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
       "|message_id|         reading_ts|reading_value|reading_type|plug_id|household_id|house_id|\n",
       "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
-      "|  21267584|2013-09-01 01:35:00|       35.099|           0|      1|           0|       1|\n",
-      "|  21371713|2013-09-01 01:36:00|       11.757|           0|      2|           0|       0|\n",
-      "|  22405161|2013-09-01 01:46:20|        0.355|           0|      1|           0|       4|\n",
-      "|  22471510|2013-09-01 01:47:00|          0.0|           1|      0|           0|       4|\n",
-      "|  22636827|2013-09-01 01:48:40|          0.0|           1|      1|           0|       3|\n",
-      "|  23903171|2013-09-01 02:01:20|        0.161|           0|      0|           0|       9|\n",
-      "|  24134854|2013-09-01 02:03:40|        9.853|           1|      2|           0|       0|\n",
-      "|  24302832|2013-09-01 02:05:20|         2.25|           0|      1|           0|       7|\n",
-      "|  24435084|2013-09-01 02:06:40|          0.0|           1|      0|           0|       2|\n",
-      "|  25134972|2013-09-01 02:13:40|          0.0|           1|      0|           0|       5|\n",
-      "|  25268752|2013-09-01 02:15:00|          0.0|           1|      2|           0|       5|\n",
-      "|  25599296|2013-09-01 02:18:20|        3.355|           1|      1|           0|       1|\n",
-      "|  25601331|2013-09-01 02:18:20|         2.25|           0|      1|           0|       5|\n",
-      "|  25832881|2013-09-01 02:20:40|        0.161|           0|      2|           0|       2|\n",
-      "|  26399731|2013-09-01 02:26:20|        0.982|           0|      2|           0|       4|\n",
-      "|  26566167|2013-09-01 02:28:00|          0.0|           1|      1|           0|       3|\n",
-      "|  26699760|2013-09-01 02:29:20|          0.0|           1|      2|           0|       9|\n",
-      "|  26932542|2013-09-01 02:31:40|        0.982|           0|      0|           0|       7|\n",
-      "|  27431839|2013-09-01 02:36:40|         2.25|           0|      1|           0|       7|\n",
-      "|  27631410|2013-09-01 02:38:40|          0.0|           1|      2|           0|       9|\n",
+      "| 219686108|2013-09-02 10:48:20|          0.0|           1|      1|           0|       3|\n",
+      "| 220252836|2013-09-02 10:54:00|          0.0|           1|      0|           0|       4|\n",
+      "| 219853298|2013-09-02 10:50:00|          0.0|           1|      1|           0|       9|\n",
+      "| 221116806|2013-09-02 11:02:40|      136.521|           1|      1|           0|       1|\n",
+      "| 222516718|2013-09-02 11:16:40|       67.329|           1|      0|           0|       8|\n",
+      "| 222782967|2013-09-02 11:19:20|       60.253|           1|      0|           0|       8|\n",
+      "| 222849589|2013-09-02 11:20:00|          0.0|           1|      1|           0|       9|\n",
+      "| 224446503|2013-09-02 11:36:00|          0.0|           1|      2|           0|       7|\n",
+      "| 225245702|2013-09-02 11:44:00|          0.0|           1|      0|           0|       5|\n",
+      "| 227775956|2013-09-02 12:09:20|          0.0|           1|      1|           0|       5|\n",
+      "| 227308542|2013-09-02 12:04:40|          0.0|           1|      2|           0|       2|\n",
+      "| 227141058|2013-09-02 12:03:00|       10.645|           1|      2|           0|       0|\n",
+      "| 227375853|2013-09-02 12:05:20|          0.0|           1|      1|           0|       5|\n",
+      "| 226777239|2013-09-02 11:59:20|          0.0|           1|      2|           0|       7|\n",
+      "| 229172357|2013-09-02 12:23:20|          0.0|           1|      2|           0|       2|\n",
+      "| 221018384|2013-09-02 11:01:40|          0.0|           1|      0|           0|       9|\n",
+      "| 221917880|2013-09-02 11:10:40|          0.0|           1|      2|           0|       5|\n",
+      "| 222217504|2013-09-02 11:13:40|          0.0|           1|      0|           0|       7|\n",
+      "| 223648548|2013-09-02 11:28:00|          0.0|           1|      1|           0|       5|\n",
+      "| 224412758|2013-09-02 11:35:40|          0.0|           1|      1|           0|       3|\n",
       "+----------+-------------------+-------------+------------+-------+------------+--------+\n",
       "only showing top 20 rows\n",
       "\n"
@@ -281,43 +247,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res2: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
+       "res18: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
        "{\n",
-       "  \"id\" : \"9a99c6a0-e13f-4654-824c-d8fd89919a13\",\n",
-       "  \"runId\" : \"9b858307-236e-4829-8378-b927c61ba527\",\n",
+       "  \"id\" : \"f9ecee83-8f34-4875-b682-c10c7344564b\",\n",
+       "  \"runId\" : \"54100149-2487-44fa-8aff-76654e1807dd\",\n",
        "  \"name\" : \"readings\",\n",
-       "  \"timestamp\" : \"2020-03-02T12:48:06.186Z\",\n",
-       "  \"batchId\" : 0,\n",
-       "  \"numInputRows\" : 33,\n",
-       "  \"processedRowsPerSecond\" : 0.9723613648417703,\n",
+       "  \"timestamp\" : \"2020-03-02T15:38:27.730Z\",\n",
+       "  \"batchId\" : 4,\n",
+       "  \"numInputRows\" : 3126,\n",
+       "  \"inputRowsPerSecond\" : 212.01844818231146,\n",
+       "  \"processedRowsPerSecond\" : 19.3442988155794,\n",
        "  \"durationMs\" : {\n",
-       "    \"addBatch\" : 30895,\n",
-       "    \"getBatch\" : 11,\n",
+       "    \"addBatch\" : 161285,\n",
+       "    \"getBatch\" : 0,\n",
        "    \"getEndOffset\" : 0,\n",
-       "    \"queryPlanning\" : 868,\n",
-       "    \"setOffsetRange\" : 1839,\n",
-       "    \"triggerExecution\" : 33936,\n",
-       "    \"walCommit\" : 75\n",
+       "    \"queryPlanning\" : 169,\n",
+       "    \"setOffsetRange\" : 4,\n",
+       "    \"triggerExecution\" : 161598,\n",
+       "    \"walCommit\" : 90\n",
        "  },\n",
        "  \"eventTime\" : {\n",
-       "    \"avg\" : \"2013-09-01T02:30:00.606Z\",\n",
-       "    \"max\" : \"2013-09-01T03:18:40.000Z\",\n",
-       "    \"min\" : \"2013-09-01T01:35:00.000Z\",\n",
-       "    \"watermark\" : \"1970-01-01T00:00:00.000Z\"\n",
+       "    \"avg\" : \"2013-09-02T17:03:07.236Z\",\n",
+       "    \"max\" : \"2013-09-02T17:43:00.000Z\",\n",
+       "    \"min\" : \"2013-09-02T16:29:40.000Z\",\n",
+       "    \"watermark\" : \"2013-09-02T16:48:20.000Z\"\n",
        "  },\n",
        "  \"stateOperators\" : [ {\n",
-       "    \"numRowsTotal\" : 33,\n",
-       "    \"numRowsUpdated\" : 33,\n",
-       "    \"memo..."
+       "    \"numRowsTotal..."
       ]
      },
-     "execution_count": 8,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,13 +294,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res3: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
+       "res19: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
        "{\n",
        "  \"message\" : \"Processing new data\",\n",
        "  \"isDataAvailable\" : true,\n",
@@ -343,7 +308,7 @@
        "}\n"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,16 +328,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "ingestQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@379de019\n"
+       "ingestQuery: org.apache.spark.sql.streaming.StreamingQuery = org.apache.spark.sql.execution.streaming.StreamingQueryWrapper@7c3fcc66\n"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,30 +358,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ingestQuery.lastProgress.stateOperators"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "res42: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
+       "res20: org.apache.spark.sql.streaming.StreamingQueryProgress =\n",
        "{\n",
-       "  \"message\" : \"Getting offsets from KafkaV2[Subscribe[alert_1_stats]]\",\n",
-       "  \"isDataAvailable\" : false,\n",
+       "  \"id\" : \"14686b54-a3bf-46b6-9561-1af1d282eb8e\",\n",
+       "  \"runId\" : \"6fb5db6e-b637-4f38-a55b-b80e0db28ad1\",\n",
+       "  \"name\" : null,\n",
+       "  \"timestamp\" : \"2020-03-02T15:38:13.069Z\",\n",
+       "  \"batchId\" : 1,\n",
+       "  \"numInputRows\" : 11229,\n",
+       "  \"inputRowsPerSecond\" : 194.37087812224127,\n",
+       "  \"processedRowsPerSecond\" : 61.10854126418329,\n",
+       "  \"durationMs\" : {\n",
+       "    \"addBatch\" : 183051,\n",
+       "    \"getBatch\" : 0,\n",
+       "    \"getEndOffset\" : 0,\n",
+       "    \"queryPlanning\" : 177,\n",
+       "    \"setOffsetRange\" : 4,\n",
+       "    \"triggerExecution\" : 183755,\n",
+       "    \"walCommit\" : 475\n",
+       "  },\n",
+       "  \"eventTime\" : {\n",
+       "    \"avg\" : \"2013-09-02T14:37:02.805Z\",\n",
+       "    \"max\" : \"2013-09-02T16:49:20.000Z\",\n",
+       "    \"min\" : \"2013-09-02T12:34:20.000Z\",\n",
+       "    \"watermark\" : \"1970-01-01T00:00:00.000Z\"\n",
+       "  },\n",
+       "  \"stateOperators\" : [ {\n",
+       "    \"numRowsTotal\" :..."
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ingestQuery.lastProgress"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "res21: org.apache.spark.sql.streaming.StreamingQueryStatus =\n",
+       "{\n",
+       "  \"message\" : \"Processing new data\",\n",
+       "  \"isDataAvailable\" : true,\n",
        "  \"isTriggerActive\" : true\n",
        "}\n"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
