--- a/jupyter/2a2_spark_case_1_anomaly_detection.ipynb
+++ b/jupyter/2a2_spark_case_1_anomaly_detection.ipynb
@@ -542,15 +542,7 @@
     "\n",
     "We can only compare the readings with the past statistics. The `reading_ts` value of `readings_prepared` stream needs to be bigger than the `last_ts` value of the `alert_1_stats` stream. We need to ensure we are comparing the stats from the right `house_id` and `hour`.\n",
     "\n",
-    "`owever, as the stream runs, the size of streaming state will keep growing indefinitely as all past input must be saved as any new input can match with any input from the past. To avoid unbounded state, you have to define additional join conditions such that indefinitely old inputs cannot match with future inputs and therefore can be cleared from the state. In other words, you will have to do the following additional steps in the join.`\n",
-    "\n",
-    "After joining, we need to ensure that we only compare the readings with their latest past statistics.\n",
-    "\n",
-    "The alert_1_stats stream is assumed to be slower to arrive compared to the readings_prepared stream, since it needs to wait at least 2 records to start calculating, and the default write trigger is every 30 seconds. \n",
-    "\n",
-    "\n",
-    "The alert_1_stats may contain multiple rows with different `last_ts` and stats values as well, and we're going to solve that with an aggregation after joining. We're going to take the max `last_ts` that is still earlier than the `reading_ts` value.\n",
-    "\n",
+    "After joining, we need to ensure that we only compare the readings with their latest past statistics. The `alert_1_stats` stream is assumed to be slower to arrive compared to the readings_prepared stream, since it needs to wait at least 2 records to start calculating, and the default write trigger is every 1 minute. \n",
     "\n"
    ]
   },
